--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 05:05:10 2018</p>
+         Last Run: Mon Jul 16 06:05:19 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 05:05:10 2018</p>
+         Last Run: Mon Jul 16 06:05:19 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -231,14 +231,14 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>29</td>
-                        <td>29</td>
+                        <td>28</td>
+                        <td>28</td>
                         <td>0</td>
-                        <td>32</td>
+                        <td>31</td>
                         <td>1</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>55</td>
+                        <td>58</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -246,23 +246,23 @@
                         <td>28</td>
                         <td>28</td>
                         <td>0</td>
-                        <td>36</td>
+                        <td>35</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>ESE</td>
-                        <td>52</td>
+                        <td>E</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>26</td>
                         <td>26</td>
-                        <td>1</td>
-                        <td>43</td>
+                        <td>0</td>
+                        <td>41</td>
                         <td>0</td>
                         <td>10</td>
                         <td>E</td>
-                        <td>54</td>
+                        <td>56</td>
                      </tr>
                   </tbody>
                </table>
@@ -306,7 +306,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "29",
+                 "28",
                  "28",
                  "26"
                ]
@@ -317,7 +317,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "29",
+                 "28",
                  "28",
                  "26"
                ]
@@ -372,7 +372,7 @@
                "data":[
                  "0",
                  "0",
-                 "1"
+                 "0"
                ]
              },
              {
@@ -380,9 +380,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "32",
-                 "36",
-                 "43"
+                 "31",
+                 "35",
+                 "41"
                ]
              },
              {
@@ -390,9 +390,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "55",
-                 "52",
-                 "54"
+                 "58",
+                 "50",
+                 "56"
                ]
              }
            ]
@@ -409,7 +409,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 05:05:10 2018</p>
+         Last Run: Mon Jul 16 06:05:19 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -433,34 +433,34 @@
                         <td>Partly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>9</td>
-                        <td>50</td>
+                        <td>8</td>
+                        <td>51</td>
                         <td>3</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>SE</td>
-                        <td>50</td>
+                        <td>54</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>11</td>
-                        <td>51</td>
+                        <td>1</td>
+                        <td>52</td>
                         <td>2</td>
                         <td>10</td>
                         <td>SE</td>
-                        <td>51</td>
+                        <td>54</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>22</td>
-                        <td>22</td>
-                        <td>32</td>
+                        <td>21</td>
+                        <td>21</td>
+                        <td>47</td>
                         <td>53</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>ESE</td>
                         <td>62</td>
                      </tr>
@@ -469,12 +469,12 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>46</td>
-                        <td>56</td>
+                        <td>39</td>
+                        <td>57</td>
                         <td>0</td>
                         <td>13</td>
-                        <td>ESE</td>
-                        <td>65</td>
+                        <td>E</td>
+                        <td>66</td>
                      </tr>
                   </tbody>
                </table>
@@ -521,7 +521,7 @@
                "data":[
                  "22",
                  "22",
-                 "22",
+                 "21",
                  "21"
                ]
              },
@@ -533,7 +533,7 @@
                "data":[
                  "22",
                  "22",
-                 "22",
+                 "21",
                  "21"
                ]
              }
@@ -586,10 +586,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "9",
-                 "11",
-                 "32",
-                 "46"
+                 "8",
+                 "1",
+                 "47",
+                 "39"
                ]
              },
              {
@@ -597,10 +597,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "50",
                  "51",
+                 "52",
                  "53",
-                 "56"
+                 "57"
                ]
              },
              {
@@ -608,10 +608,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "50",
-                 "51",
+                 "54",
+                 "54",
                  "62",
-                 "65"
+                 "66"
                ]
              }
            ]
@@ -628,7 +628,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 05:05:10 2018</p>
+         Last Run: Mon Jul 16 06:05:19 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -652,60 +652,60 @@
                         <td>Partly Cloudy</td>
                         <td>15</td>
                         <td>15</td>
-                        <td>22</td>
-                        <td>62</td>
+                        <td>24</td>
+                        <td>60</td>
                         <td>3</td>
                         <td>10</td>
                         <td>NW</td>
-                        <td>43</td>
+                        <td>46</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Partly Cloudy</td>
                         <td>16</td>
                         <td>16</td>
-                        <td>23</td>
-                        <td>57</td>
+                        <td>24</td>
+                        <td>55</td>
                         <td>4</td>
                         <td>10</td>
-                        <td>NNW</td>
-                        <td>43</td>
+                        <td>NW</td>
+                        <td>46</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>18</td>
-                        <td>18</td>
-                        <td>18</td>
-                        <td>52</td>
+                        <td>Chance of a Thunderstorm</td>
+                        <td>17</td>
+                        <td>17</td>
+                        <td>51</td>
+                        <td>51</td>
                         <td>6</td>
                         <td>10</td>
-                        <td>NNW</td>
-                        <td>43</td>
+                        <td>NW</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>19</td>
-                        <td>19</td>
-                        <td>15</td>
+                        <td>Chance of a Thunderstorm</td>
+                        <td>18</td>
+                        <td>18</td>
+                        <td>47</td>
                         <td>48</td>
-                        <td>6</td>
+                        <td>7</td>
                         <td>10</td>
-                        <td>NNW</td>
-                        <td>55</td>
+                        <td>NW</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Chance of a Thunderstorm</td>
                         <td>19</td>
                         <td>19</td>
-                        <td>15</td>
-                        <td>46</td>
+                        <td>44</td>
+                        <td>47</td>
                         <td>7</td>
                         <td>10</td>
                         <td>NNW</td>
-                        <td>48</td>
+                        <td>50</td>
                      </tr>
                   </tbody>
                </table>
@@ -753,8 +753,8 @@
                "data":[
                  "15",
                  "16",
+                 "17",
                  "18",
-                 "19",
                  "19"
                ]
              },
@@ -766,8 +766,8 @@
                "data":[
                  "15",
                  "16",
+                 "17",
                  "18",
-                 "19",
                  "19"
                ]
              }
@@ -821,11 +821,11 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "22",
-                 "23",
-                 "18",
-                 "15",
-                 "15"
+                 "24",
+                 "24",
+                 "51",
+                 "47",
+                 "44"
                ]
              },
              {
@@ -833,11 +833,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "62",
-                 "57",
-                 "52",
+                 "60",
+                 "55",
+                 "51",
                  "48",
-                 "46"
+                 "47"
                ]
              },
              {
@@ -845,11 +845,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "43",
-                 "43",
-                 "43",
-                 "55",
-                 "48"
+                 "46",
+                 "46",
+                 "50",
+                 "50",
+                 "50"
                ]
              }
            ]
