--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 06:05:19 2018</p>
+         Last Run: Mon Jul 16 07:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -46,7 +46,7 @@
                         <td>29</td>
                         <td>29</td>
                         <td>0</td>
-                        <td>23</td>
+                        <td>24</td>
                         <td>1</td>
                         <td>14</td>
                         <td>SE</td>
@@ -181,7 +181,7 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "21",
-                 "23",
+                 "24",
                  "28"
                ]
              },
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 06:05:19 2018</p>
+         Last Run: Mon Jul 16 07:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -238,7 +238,7 @@
                         <td>1</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>58</td>
+                        <td>55</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -249,8 +249,8 @@
                         <td>35</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>E</td>
-                        <td>50</td>
+                        <td>ESE</td>
+                        <td>46</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -262,7 +262,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>E</td>
-                        <td>56</td>
+                        <td>54</td>
                      </tr>
                   </tbody>
                </table>
@@ -390,9 +390,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "58",
-                 "50",
-                 "56"
+                 "55",
+                 "46",
+                 "54"
                ]
              }
            ]
@@ -409,7 +409,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 06:05:19 2018</p>
+         Last Run: Mon Jul 16 07:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -438,43 +438,43 @@
                         <td>3</td>
                         <td>10</td>
                         <td>SE</td>
-                        <td>54</td>
+                        <td>55</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>1</td>
+                        <td>4</td>
                         <td>52</td>
                         <td>2</td>
                         <td>10</td>
                         <td>SE</td>
-                        <td>54</td>
+                        <td>56</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>47</td>
+                        <td>50</td>
                         <td>53</td>
                         <td>1</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>62</td>
+                        <td>64</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>39</td>
+                        <td>42</td>
                         <td>57</td>
                         <td>0</td>
                         <td>13</td>
                         <td>E</td>
-                        <td>66</td>
+                        <td>69</td>
                      </tr>
                   </tbody>
                </table>
@@ -587,9 +587,9 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "8",
-                 "1",
-                 "47",
-                 "39"
+                 "4",
+                 "50",
+                 "42"
                ]
              },
              {
@@ -608,10 +608,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "54",
-                 "54",
-                 "62",
-                 "66"
+                 "55",
+                 "56",
+                 "64",
+                 "69"
                ]
              }
            ]
@@ -628,7 +628,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 06:05:19 2018</p>
+         Last Run: Mon Jul 16 07:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
