--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 08:05:32 2018</p>
+         Last Run: Mon Jul 16 09:05:31 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -36,7 +36,7 @@
                         <td>0</td>
                         <td>21</td>
                         <td>2</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>SE</td>
                         <td>0</td>
                      </tr>
@@ -48,7 +48,7 @@
                         <td>0</td>
                         <td>24</td>
                         <td>1</td>
-                        <td>16</td>
+                        <td>14</td>
                         <td>SE</td>
                         <td>0</td>
                      </tr>
@@ -58,7 +58,7 @@
                         <td>27</td>
                         <td>27</td>
                         <td>0</td>
-                        <td>28</td>
+                        <td>29</td>
                         <td>0</td>
                         <td>14</td>
                         <td>SE</td>
@@ -182,7 +182,7 @@
                "data":[
                  "21",
                  "24",
-                 "28"
+                 "29"
                ]
              },
              {
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 08:05:32 2018</p>
+         Last Run: Mon Jul 16 09:05:31 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -238,11 +238,11 @@
                         <td>1</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>52</td>
+                        <td>53</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>28</td>
                         <td>28</td>
                         <td>0</td>
@@ -250,19 +250,19 @@
                         <td>0</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>59</td>
+                        <td>60</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>26</td>
                         <td>26</td>
-                        <td>1</td>
+                        <td>0</td>
                         <td>41</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>E</td>
-                        <td>57</td>
+                        <td>58</td>
                      </tr>
                   </tbody>
                </table>
@@ -372,7 +372,7 @@
                "data":[
                  "0",
                  "0",
-                 "1"
+                 "0"
                ]
              },
              {
@@ -390,9 +390,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "52",
-                 "59",
-                 "57"
+                 "53",
+                 "60",
+                 "58"
                ]
              }
            ]
@@ -409,7 +409,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 08:05:32 2018</p>
+         Last Run: Mon Jul 16 09:05:31 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -433,20 +433,20 @@
                         <td>Partly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>16</td>
+                        <td>9</td>
                         <td>51</td>
                         <td>3</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>SE</td>
-                        <td>56</td>
+                        <td>55</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>22</td>
-                        <td>51</td>
+                        <td>7</td>
+                        <td>52</td>
                         <td>2</td>
                         <td>10</td>
                         <td>SE</td>
@@ -455,9 +455,9 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>22</td>
-                        <td>22</td>
-                        <td>51</td>
+                        <td>21</td>
+                        <td>21</td>
+                        <td>46</td>
                         <td>53</td>
                         <td>1</td>
                         <td>11</td>
@@ -469,12 +469,12 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>37</td>
-                        <td>56</td>
+                        <td>36</td>
+                        <td>57</td>
                         <td>0</td>
                         <td>13</td>
                         <td>E</td>
-                        <td>67</td>
+                        <td>69</td>
                      </tr>
                   </tbody>
                </table>
@@ -521,7 +521,7 @@
                "data":[
                  "22",
                  "22",
-                 "22",
+                 "21",
                  "21"
                ]
              },
@@ -533,7 +533,7 @@
                "data":[
                  "22",
                  "22",
-                 "22",
+                 "21",
                  "21"
                ]
              }
@@ -586,10 +586,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "16",
-                 "22",
-                 "51",
-                 "37"
+                 "9",
+                 "7",
+                 "46",
+                 "36"
                ]
              },
              {
@@ -598,9 +598,9 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "51",
-                 "51",
+                 "52",
                  "53",
-                 "56"
+                 "57"
                ]
              },
              {
@@ -608,10 +608,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "56",
+                 "55",
                  "56",
                  "64",
-                 "67"
+                 "69"
                ]
              }
            ]
@@ -628,7 +628,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 08:05:32 2018</p>
+         Last Run: Mon Jul 16 09:05:31 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
